# redcrane-engine

./: .atom-build.json  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README  README.adoc  README.md  TODO  TODO.adoc  code.adoc  engine.adoc  old-code.adoc  run.sh
freetype-gl/: CMakeLists.txt  README.md  opengl.h
src/: CMakeLists.txt  color.h  event.h  event_spread.cpp  glfw3_controller.cpp  glfw3_controller.h  load_gltf.cpp  main.cpp  main_cel.cpp  main_deferred.cpp  main_fps.cpp  main_sail.cpp  main_sword.cpp  map.cpp  map.h  map_gen.cpp  maybe_owned.cpp  maybe_owned.hpp  mesh.cpp  mesh.h  mesh_container.cpp  mesh_container.h  minilua.cpp  minilua.h  play_snd.cpp  player.cpp  player.h  reactor.cpp  redcrane.cpp  redcrane.hpp  redcrane_decl.h  scene.cpp  scene.h  scene_node.cpp  scene_node.h  scoped_drop.hpp  sdl_helper.cpp  sdl_helper.h  server.cpp  server.h  (+2 more)
src/assets/: CMakeLists.txt  README.asciidoc  asset.h  assets.h  describe.h  discovery.cpp  discovery.h  file_stream.hpp  find.h  fs_cache.cpp  fs_cache.h  live_file.cpp  live_file.h  load.cpp  load.h  load_dir.cpp  load_dir.h  minigltf.cpp  minigltf.h
src/boatlib/: CMakeLists.txt  boat.cpp  boat.h  boat_def.cpp
src/collisionlib/: CMakeLists.txt  motion.cpp  motion.h  sweep_and_prune.cpp  sweep_and_prune.h  triangle.cpp  triangle.h  triangle_conversion.cpp  triangle_conversion.h
src/common/: CMakeLists.txt  Cache.h  Cache_Impl.hpp  ID_Gen.hpp  ID_Map.hpp  aabb.cpp  aabb.h  algorithm.h  animation.cpp  animation.h  cache.h  cache_impl.hpp  center.hpp  circle.h  clamp.hpp  color.h  crash.h  crash.hpp  debugging.cpp  debugging.h  force_inline.h  gen_noise.h  glm_vec_serialize.h  grid_iterator.h  id_gen.hpp  id_map.hpp  json.cpp  json.h  lock.h  log.cpp  log.h  maybe_owned.hpp  mesh.cpp  mesh.h  mesh_container.h  mesh_load.cpp  mesh_load.h  mesh_write.cpp  mesh_write.h  noise.cpp  (+37 more)
src/cwrap/: engine.cpp  map.cpp  mesh.cpp  redcrane.cpp  redcrane.hpp  scene.cpp  server.cpp  shader.cpp  text.cpp  texture.cpp
src/effects/: CMakeLists.txt  boat.cpp  boat.h  envmap.cpp  envmap.h  ocean.cpp  ocean.h
src/fps/: CMakeLists.txt  camera_controller.cpp  camera_controller.h  load_scene.cpp  load_scene.h
src/gfx/: CMakeLists.txt  asset_render.cpp  asset_render.h  camera.cpp  camera.h  color.h  common.cpp  common.h  deferred.cpp  deferred.h  enums.h  find_string_index.hpp  funcs.cpp  funcs.h  ibuffer.h  idriver.h  idriver_ui_adapter.cpp  idriver_ui_adapter.h  ifactory.h  iframebuffer.h  ihandle.h  imaterial.h  imesh.cpp  imesh.h  immediate_renderer.cpp  immediate_renderer.h  iscene_observer.h  ishader.cpp  ishader.h  itexture.cpp  itexture.h  load_material.cpp  location_cache.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_chunk.cpp  mesh_chunk.h  mesh_data.cpp  (+23 more)
src/gfx/extra/: allocate.cpp  (+27 more)
src/input/: CMakeLists.txt  input.cpp  input.h
src/io/: CMakeLists.txt  buffer.cpp  buffer.h  common.h  external_io.cpp  external_io.h  ipc.cpp  ipc.h  net.cpp  net.h  net_io.cpp  net_io.h
src/lua/: config_sandbox.lua  init_engine.lua  mesh.lua  mesh_pool.lua  redc_ffi.lua  redcrane.lua  run_engine.lua  sandbox.lua  scene.lua  server.lua  shader.lua  text.lua  texture.lua
src/luaint/: CMakeLists.txt  common.cpp  common.h  gen.cpp  gen.h
src/map/: CMakeLists.txt  json_structure.cpp  json_structure.h  map.cpp  map.h  structure.cpp  structure.h  terrain.cpp  terrain.h  water.cpp  water.h
src/net/: CMakeLists.txt  client.cpp  client.h  client_protocol.cpp  client_protocol.h  common.h  net_io.cpp  net_io.h  protocol.cpp  protocol.h  requirements.adoc  server_protocol.cpp  server_protocol.h
src/procedural/: CMakeLists.txt  lake_radial.cpp  lake_radial.h  noise_algorithm.cpp  noise_algorithm.h  radial_algorithm.cpp  radial_algorithm.h  terrain.cpp  terrain.h
src/rpc/: CMakeLists.txt  client.cpp  client.h  dispatch.cpp  dispatch.h  method_userdata.h  msgpack_interface.cpp  msgpack_interface.h  network_client.h  plugins.cpp  plugins.h  req.cpp  req.h  server.cpp  server.h
src/sail/: CMakeLists.txt  boat.cpp  boat.h  boat_def.cpp  game.cpp  game.h  game_struct.h  methods.cpp  methods.h  player_data.cpp  player_data.h  server.cpp  server.h
src/scene/: CMakeLists.txt  node.cpp  node.h
src/snd/: CMakeLists.txt  common.cpp  common.h  flac.cpp  flac.h  pcm_data.h
src/steamlib/: CMakeLists.txt  steamwrap.cpp  steamwrap.h
src/strat/: CMakeLists.txt  event.cpp  event.h  map.cpp  map.h  player_state.cpp  player_state.h  structure.cpp  structure.h  terrain.cpp  terrain.h  wall.cpp  wall.h  water.cpp  water.h
src/stratlib/: CMakeLists.txt  event.cpp  event.h  message_dispatcher.cpp  message_dispatcher.h  player_state.cpp  player_state.h  value_map.h
src/tasks/: CMakeLists.txt  render.cpp  render.h  server.cpp  server.h
src/terrain/: CMakeLists.txt  chunks.cpp  chunks.h  chunks_detail.cpp
src/tests/: CMakeLists.txt  algorithm.cpp  circle.cpp  element_iterator.cpp  grid_iterator.cpp  maybe_owned.cpp  mesh.cpp  object.cpp  sap.cpp  software_texture.cpp  triangle_conversion.cpp  vec.cpp  wall.cpp
src/ui/: CMakeLists.txt  Event_Trigger.h  View.cpp  View.h  View_Container.h  View_Container_impl.hpp  cast.h  controller.cpp  controller.h  element.cpp  element.h  element_composite.h  element_composite_impl.hpp  element_iterator.cpp  element_iterator.h  freetype_renderer.cpp  freetype_renderer.h  ifont_renderer.h  load.cpp  load.h  mouse_logic.cpp  mouse_logic.h  pie_menu.cpp  pie_menu.h  renderer.h  simple_controller.cpp  simple_controller.h  ui.h
src/use/: CMakeLists.txt  effect.h  mesh.cpp  mesh.h  mesh_cache.cpp  mesh_cache.h  texture.cpp  texture.h
src/water/: CMakeLists.txt  grid.cpp  grid.h
tests/: CMakeLists.txt  main.cpp
tests/collisionlib/: sap.cpp  triangle.cpp  triangle_conversion.cpp
tests/common/: algorithm.cpp  cache.cpp  circle.cpp  grid_iterator.cpp  id_gen.cpp  maybe_owned.cpp  peer_ptr.cpp  timed_text_test.cpp  tree.cpp  utility.cpp  value_map.cpp  vec.cpp  vector.cpp  volume.cpp
tests/gfx/: mesh.cpp
tests/rpc/: msgpack_interface.cpp  msgpack_plugin.cpp
tests/terrain/: chunks.cpp
(+236 files in other folders)
